@@ -1,3 +1,9 @@
+2005-06-01  Maciej W. Rozycki  <macro@linux-mips.org>
+
+	* config/tc-mips.c (load_register): Add leading "0x" to the
+	output of sprintf_vma().
+	(macro): Likewise.
+
 2005-06-01  Nick Clifton  <nickc@redhat.com>
 
 	* config/tc-arm.c (TxCE, TxC3, TxCM, TUE, TUF): Remove redundant
